--- a/frontd.html
+++ b/frontd.html
@@ -13,7 +13,7 @@
       <h1>Data Pop</h1>
 
       <!-- Logo -->
-      <img src="https://i.stack.imgur.com/PgcSR.png" style="margin-top: 32px; margin-bottom: 32px" />
+      <img src="https://imgur.com/MwN3OvX" style="margin-top: 32px; margin-bottom: 32px" />
 
       <!-- Trigger dropdown -->
       <div class="dropdown" style="margin: 16px">
